--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
     <div id="profile">
         <img src="https://avatars.githubusercontent.com/u/93425635?v=4">
-        <h1>Honkai Senbai</h1>
+        <h1 id="Name">Honkai Senbai</h1>
+        <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&center=true&vCenter=true&random=false&width=435&lines=Hello+Im+Bao;You+are+cool!;" alt="Typing SVG" /></a>
         <p>My Portfolio website!</p>
     </div>
     <div id="project">
@@ -19,7 +20,8 @@
     </div>
 </body>
 <footer>
-    <p>Made with luv </p>
+    <p>Made with ♥ </p>
+    <p>boba-rot xD</p>
+    <img src="images/boba-parrot.gif" alt="boba" title="A parrot with boba" height="20px">
 </footer>
-
 </html>
