--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </body>
 <footer>
     <p>Made with ♥ </p>
-    <p>boba-rot xD</p>
+    <p>wide boba-rot xD</p>
     <img src="images/boba-parrot.gif" alt="boba" title="A parrot with boba" height="20px">
 </footer>
 </html>
