added more text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="profile">
         <img src="https://avatars.githubusercontent.com/u/93425635?v=4">
         <h1 id="Name">Honkai Senbai</h1>
-        <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&center=true&vCenter=true&random=false&width=435&lines=Hello+Im+Bao;You+are+cool!;" alt="Typing SVG" /></a>
+        <a href="https://git.io/typing-svg"><img src="https://readme-typing-svg.demolab.com?font=Fira+Code&pause=1000&center=true&vCenter=true&random=false&width=435&lines=Hello+Im+Bao;You+are+cool!;Today+is+not+tomorrow;You+are+special;If+you+seeing+this,+Thank+for+visisting" alt="Typing SVG" /></a>
         <p>My Portfolio website!</p>
     </div>
     <div id="project">
