skibidi(imgoin insane)

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <p>Have you read the image?</p>
     </div>
     <div id="project">
+        <p>My <a href ="https://github.com/honkaisenbai/">Github</a>Project</p>
         <a href="https://github.com/honkaisenbai/DiscordBojt">DiscordBotjt</a>
         <a href="https://github.com/honkaisenbai/DownloadFileFromUrl">DownloadFileFromUrl</a>
     </div>
